<resources>
    <!-- General App Strings -->
    <string name="app_name">To Do List</string>

    <!-- Create To Do Strings -->
    <string name="todo_input_suggestion">Type your todo here</string>
    <string name="create_todo">Create</string>

    <!-- Java UI Strings -->
    <string name="create_button">Create</string>

    <!-- Layout Strings -->
    <string name="bottom_menu_info">Info</string>
    <string name="bottom_menu_edit">Edit</string>
    <string name="bottom_menu_delete">Delete</string>
    <string name="bottom_menu_complete">Complete</string>

    <!-- Temporary Strings -->
    <string name="temp_todo_submit_text">Temporary</string>
    <string name="title_list_list">Lists</string>
    <string name="title_list_detail">List Detail</string>
</resources>
